# AOC2022

./: AOC2022.cabal  README.md
app/: D2P1.hs  D2P2.hs  D3P1.hs  D3P2.hs  D4P1.hs  D4P2.hs  D5P1.hs  D5P2.hs  D6P1.hs  D6P2.hs  D7P1.hs  D7P2.hs  D8P1.hs  D8P2.hs  D9P1.hs  D9P2.hs  Day1Part1.hs  Day1Part2.hs
