cabal-version:      2.4
name:               AOC2022
version:            0.1.0.0

author:             olligobber
maintainer:         sirolligobbervii@yahoo.com.au

executable Day1Part1
    main-is:          Day1Part1.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable Day1Part2
    main-is:          Day1Part2.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010