cabal-version:      2.4
name:               AOC2022
version:            0.1.0.0

author:             olligobber
maintainer:         sirolligobbervii@yahoo.com.au

common shared-props
    ghc-options:      -dynamic

executable Day1Part1
    import:           shared-props
    main-is:          Day1Part1.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable Day1Part2
    import:           shared-props
    main-is:          Day1Part2.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable Day2Part1
    import:           shared-props
    main-is:          Day2Part1.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable Day2Part2
    import:           shared-props
    main-is:          Day2Part2.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010