cabal-version:      2.4
name:               AOC2022
version:            0.1.0.0

author:             olligobber
maintainer:         sirolligobbervii@yahoo.com.au

common shared-props
    ghc-options:      -dynamic
                      -Wno-tabs

executable D1P1
    import:           shared-props
    main-is:          D1P1.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable D1P2
    import:           shared-props
    main-is:          D1P2.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable D2P1
    import:           shared-props
    main-is:          D2P1.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable D2P2
    import:           shared-props
    main-is:          D2P2.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable D3P1
    import:           shared-props
    main-is:          D3P1.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable D3P2
    import:           shared-props
    main-is:          D3P2.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable D4P1
    import:           shared-props
    main-is:          D4P1.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable D4P2
    import:           shared-props
    main-is:          D4P2.hs
    build-depends:    base ^>=4.15.1.0
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable D5P1
    import:           shared-props
    main-is:          D5P1.hs
    build-depends:    base ^>=4.15.1.0
                    , containers ^>= 0.6.6
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable D5P2
    import:           shared-props
    main-is:          D5P2.hs
    build-depends:    base ^>=4.15.1.0
                    , containers ^>= 0.6.6
                    , split ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010

executable D6P1
    import:           shared-props
    main-is:          D6P1.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable D6P2
    import:           shared-props
    main-is:          D6P2.hs
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010